# stardew-save-editor

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
data/: items.json
data/items_raw/: SOURCES.md
docs/: index.html  items.js  privacy.html
packaging/: fix_dylibs.sh  pmd3_cli.py  setup_py2app.py
packaging/helper_cli/: README.md  pull_push.py  svse-helper.spec
src/svse/: paths.py
src/svse/device/: __init__.py  _shell.py  _util.py  discovery.py  errors.py  house_arrest.py  models.py  pairing.py  saves.py
src/svse/gui/: app.py  main_window.py  session.py
src/svse/gui/panels/: device_picker.py  inventory_tab.py  map_tab.py  money_tab.py  relationships_tab.py
src/svse/gui/theme/: __init__.py  stardew.qss
src/svse/gui/widgets/: inventory_slot_widget.py  item_picker_dialog.py  tile_canvas.py
src/svse/itemdb/: __init__.py  loader.py  models.py  search.py
src/svse/mapdata/: tilesheet.py
src/svse/safety/: __init__.py  snapshots.py
src/svse/savemodel/: __init__.py  chest.py  constants.py  errors.py  inventory.py  models.py  money.py  object_xml.py  placement.py  relationships.py  save_file.py  validation.py
test_saves/: sample_save_with_bom.xml
tests/: test_edit_dump_reload_cycle.py  test_gui_smoke.py  test_inventory_cap.py  test_itemdb_integrity.py  test_money_sync.py  test_placement_and_chest.py  test_placement_dedup.py  test_relationships.py  test_savemodel_roundtrip.py
tools/: build_item_db.py  smoke_test_device.py  test_roundtrip.py
web/: DEPLOY.md  index.html  privacy.html  svse-helper.py
(+2 files in other folders)
