[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "stardew-save-editor"
version = "0.1.0"
description = "GUI save editor for Stardew Valley mobile saves, connecting over USB via pymobiledevice3."
requires-python = ">=3.9"
dependencies = [
    "pymobiledevice3",
    "PySide6",
    "lxml",
    "Pillow",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
